--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>News Portal</title>
   <link rel="stylesheet" href="styles/index.css">
   <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap"
-  rel="stylesheet">
+    rel="stylesheet">
 </head>
 
 <body>
@@ -39,6 +39,29 @@
       <a href="#">Realidade Virtual</a>
     </nav>
   </header>
+
+  <main class="grid container">
+    <section id="featured" class="grid grid-flow-col gap-16">
+      <div>
+        <img src="assets/images/Image 01.png" alt="">
+      </div>
+
+      <div class="grid grid-cols-2 gap-16">
+        <div>
+          <img src="assets/images/Image 02.png" alt="">
+        </div>
+        <div>
+          <img src="assets/images/Image 03.png" alt="">
+        </div>
+        <div>
+          <img src="assets/images/Image 04.png" alt="">
+        </div>
+        <div>
+          <img src="assets/images/Image 05.png" alt="">
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 
 </html>
