last cards styles

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
       </div>
     </section>
 
-    <div>
+    <aside>
       <div id="ads">
         <img src="assets/Ads.png" alt="">
       </div>
@@ -297,7 +297,7 @@
           </article>
         </div>
       </section>
-    </div>
+    </aside>
 
   </main>
 </body>
